Plug in/Line/api_VecApi.h

//-------------------------------------
// Properties of "Navigator" window (aerial view)
//-------------------------------------
typedef struct tagVLNAVIGATOR {
  int      Left;   
  int      Top; 
  int      Width; 
  int      Height;
  COLORREF ColorZoomRect;
  BOOL     Realtime;
}VLNAVIGATOR;
//-------------------------------------
// Properties of "Layers Manager" window
//-------------------------------------
typedef struct tagVLLAYWIN {
  int      Left;       
  int      Top;       
  int      Width;      
  int      Height;    
}VLLAYWIN;
/////////////////////////////////////////////////
// Additional VeCAD controls

// Toolbar
HWND VC_API vlToolBarCreate  (HWND hwParent, int Id, int X, int Y, int W, int H, int* pW, int* pH);
BOOL VC_API vlToolBarButton  (int Id);
// Statusbar
HWND VC_API vlStatBarCreate  (HWND hwParent, int* pH);
BOOL VC_API vlStatBarResize  ();
BOOL VC_API vlStatBarSetText (int iPart, LPCTSTR szText);
// Progress indicator
BOOL VC_API vlIndicCreate   (HWND Parent, LPCTSTR szTitle);
BOOL VC_API vlIndicDestroy  ();
BOOL VC_API vlIndicSetRange (int nFrom,int nTo);
BOOL VC_API vlIndicSetPos   (int iPos);
BOOL VC_API vlIndicSetText  (LPCTSTR szText);
BOOL VC_API vlIndicStep     ();
// "Navigator" window
HWND VC_API vlNavCreate     (HWND hWndParent, HWND hVecWnd, int wstyle, int X, int Y, int W, int H);
BOOL VC_API vlNavResize     (int X, int Y, int W, int H);
BOOL VC_API vlNavUpdate     ();
BOOL VC_API vlNavGetProp    (VLNAVIGATOR* pProp);
BOOL VC_API vlNavPutProp    (const VLNAVIGATOR* pProp);
// "Layers Manager" window
HWND VC_API vlLayWinCreate  (HWND hWndParent, int Style, int X, int Y, int W, int H);
BOOL VC_API vlLayWinResize  (int X, int Y, int W, int H);
BOOL VC_API vlLayWinGetProp (VLLAYWIN* pProp);
BOOL VC_API vlLayWinPutProp (const VLLAYWIN* pProp);
// Set order of entities
BOOL VC_API vlEntSwap       (int iEnt1, int iEnt2);
BOOL VC_API vlEntToTop      (int iEnt);
BOOL VC_API vlEntToBottom   (int iEnt);