Packages/VECAD52/vecad52/VECAD/api_VecApi.pas


// Toolbar
Function vlToolBarCreate   (hwParent: HWND; Id,X,Y,W,H: Integer; pW,pH: PInteger):HWND; stdcall; external 'vecad52.dll';
Function vlToolBarButton   (Id: Integer):Boolean; stdcall; external 'vecad52.dll';
// Statusbar
Function vlStatBarCreate   (hwParent: HWND; pH: PInteger):HWND; stdcall; external 'vecad52.dll';
Function vlStatBarResize   :Boolean; stdcall; external 'vecad52.dll';
Function vlStatBarSetText  (iPart: Integer; szText :Pchar):Boolean; stdcall; external 'vecad52.dll';
// Progress indicator
Function vlIndicCreate   (parent:HWND; szTitle: Pchar):Boolean; stdcall; external 'vecad52.dll';
Function vlIndicDestroy  :Boolean; stdcall; external 'vecad52.dll';
Function vlIndicSetRange (nFrom,nTo: Integer):Boolean; stdcall; external 'vecad52.dll';
Function vlIndicSetPos   (iPos: Integer):Boolean; stdcall; external 'vecad52.dll';
Function vlIndicSetText  (szText: Pchar):Boolean; stdcall; external 'vecad52.dll';
Function vlIndicStep     :Boolean; stdcall; external 'vecad52.dll';
// "Navigator" window
Function vlNavCreate  (hWndParent, hVecWnd: HWND; Style, X, Y, W, H: Integer): HWND; stdcall; external 'vecad52.dll';
Function vlNavResize  (X, Y, W, H: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlNavUpdate  :Boolean; stdcall; external 'vecad52.dll';
Function vlNavGetProp (Prop: PVLNAVIGATOR): Boolean; stdcall; external 'vecad52.dll';
Function vlNavPutProp (Prop: PVLNAVIGATOR): Boolean; stdcall; external 'vecad52.dll';
// "Layers Manager" window
Function vlLayWinCreate  (hWndParent: HWND; Style, X, Y, W, H: Integer): HWND; stdcall; external 'vecad52.dll';
Function vlLayWinResize  (X, Y, W, H: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlLayWinGetProp (Prop: PVLLAYWIN): Boolean; stdcall; external 'vecad52.dll';
Function vlLayWinPutProp (Prop: PVLLAYWIN): Boolean; stdcall; external 'vecad52.dll';
// Set order of entities
Function vlEntSwap       (iEnt1, iEnt2: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlEntToTop      (iEnt: Integer): Boolean; stdcall; external 'vecad52.dll';
Function vlEntToBottom   (iEnt: Integer): Boolean; stdcall; external 'vecad52.dll';


implementation
end.




